# backup-restore

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
.github/dockerfiles/: Dockerfile.keycloak  docker-compose.yml
.github/scripts/: setup_keycloak_client.py  setup_keycloak_mock.py  setup_workflow.py
.github/workflows/: build-push-docker.yaml  test_keycloak_integration.yaml
backup_restore/: __main__.py
backup_restore/adapters/: api.py  base.py
backup_restore/core/: backup.py  base.py  restore.py  storage.py
backup_restore/services/: __init__.py  base.py  keycloak.py
backup_restore/services/keycloak/: main.py  schema.py
python/: .gitignore  requirements.txt  setup.py
python/backup_restore/: __main__.py
python/backup_restore/adapters/: api.py  base.py  cli.py
python/backup_restore/core/: archive.py  backup.py  base.py  handlers.py  restore.py
python/backup_restore/services/: __init__.py  base.py  keycloak.py
resources/: README.md
resources/helm/backup-restore/: Chart.yaml  values.yaml
resources/helm/backup-restore/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  serviceaccount.yaml
tests/assets/: backup-restore-config.yaml
tests/keycloak/: test_users.py
